[package]
name = "emfcamp-dial-a-schedule"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.3", features = ["macros"] }
chrono = "0.4.40"
clap = { version = "~4.4.18", features = ["derive", "env"] }
emfcamp-schedule-api = { git = "https://github.com/DanNixon/emfcamp-schedule-api", rev = "a32795af01c50c3491805193aa263df271c5edc7" }
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.16.2", default-features = false, features = ["http-listener"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
